Closed Bug 1495212 Opened 7 years ago Closed 7 years ago

after uninstall with 'Tell Mozilla why you uninstalled Firefox' set, Internet Explorer opened but no survey page (Windows 8.1)

Categories

(Firefox :: Installer, defect, P1)

defect

Tracking

()

VERIFIED FIXED
Firefox 64
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- unaffected
firefox63 + verified
firefox64 --- verified

People

(Reporter: aryx, Assigned: molly)

References

Details

(Keywords: regression)

Attachments

(1 file)

Windows 8.1, latest Nightly 64-bit in German from http://ftp.mozilla.org/pub/firefox/nightly/2018/09/2018-09-29-10-05-56-mozilla-central-l10n/ After I uninstalled with the checkbox 'Tell Mozilla why you uninstalled Nightly' set, Internet Explorer opened but no survey page. Steps to reproduce: 1. Install Firefox. 2. Go into the installation folder and there into "uninstall". 3. Run helper.exe 4. Set the checkbox to provide feedback why Nightly gets uninstalled. 5. Finish the uninstall process. Actual result: Internet Explorer opens but not survey page. Expected result: Survey page opened.
Flags: needinfo?(mhowell)
Do you mean that IE opened with no URL in its address bar (and/or opened its home page)? Or that the URL was there but the page didn't load?
Flags: needinfo?(mhowell) → needinfo?(aryx.bugmail)
IE opened with no URL in the address bar and showed the default home page with the tiles instead.
Flags: needinfo?(aryx.bugmail)
Okay, I've figured out what happened. This is a regression from bug 1494900 where I made a silly logic error and didn't catch it because I forgot about bug 1485057.
Assignee: nobody → mhowell
Blocks: 1494900
Status: NEW → ASSIGNED
Priority: -- → P1
Comment on attachment 9013699 [details] [diff] [review] Fix command line parameter checking in ExecInExplorer plugin Crud, sorry for missing that reversed logic. Best to be using the error return anyway.
Attachment #9013699 - Flags: review?(agashlin) → review+
This has landed and got merged with a wrong bug number: https://hg.mozilla.org/mozilla-central/rev/505f6ee17c14
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 64
Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a07aead3f220 Fix command line parameter checking in ExecInExplorer plugin. r=agashlin DONTBUILD
Tracking for 63 since it's a regression from another tracked bug.
Matt, could you uplift this regression fix to beta please? Thanks
Flags: needinfo?(mhowell)
Comment on attachment 9013699 [details] [diff] [review] Fix command line parameter checking in ExecInExplorer plugin [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1448804 User impact if declined: Uninstall survey may not open on Windows 7 and 8 (Windows 10 isn't affected). Is this code covered by automated tests?: No Has the fix been verified in Nightly?: Yes Needs manual test from QE?: Yes If yes, steps to reproduce: Uninstall a build of Firefox with this patch, check the uninstall survey box at the end of the uninstaller, and verify that the survey page opens correctly in Internet Explorer (or Edge on Windows 10). I've done this verification myself, but I was never able to reproduce bug 1494900. List of other uplifts needed: Bug 1494900 Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): The affected feature is low impact and self-contained and the code runs after the end of the uninstallation, so the uninstall process itself is not impacted. String changes made/needed:
Flags: needinfo?(mhowell)
Attachment #9013699 - Flags: approval-mozilla-beta?
Comment on attachment 9013699 [details] [diff] [review] Fix command line parameter checking in ExecInExplorer plugin Tracked P1 regression, uplift approved for 63 beta 13, thanks.
Attachment #9013699 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Contact: mhowell
Verified, that the issue is no longer reproducible on Nightly 64(20181009100040) and Beta 63b13 (20181008155858). The uninstall survey page is successfully displayed in Internet Explorer(Windows7,Windows8) and Edge(Windows10).
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: