Bug 1495212 - Fix command line parameter checking in ExecInExplorer plugin. r=agashlin, a=pascalc

Because of a silly logic error I made in bug 1494900, the optional command line
parameter support introduced there doesn't actually work at all; I reversed the
sense of the check for the NSIS stack being empty. This fixes that by just using
the check that the popstring function was already doing.

--HG--
extra : source : 58a29f64dd06d4e66e6faf047e2356decc5904f4
extra : intermediate-source : a07aead3f22066d063be2e5b55e2085b38039219
extra : histedit_source : 85602f6a2c1441bf93a747f40ca0efb061462c51